# whafr

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  TRADEMARK.md  docker-compose.yml  pyproject.toml  sources.example.yaml
.github/workflows/: build-image.yml  build-web-image.yml  ci.yml  sdk-freshness.yml
charts/lighthouse/: .helmignore  Chart.yaml  README.md  values.yaml
charts/lighthouse/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  secret-env.yaml  secret-pg.yaml  service.yaml  web-deployment.yaml  web-ingress.yaml  web-service.yaml
compose/: .env.example  README.md  docker-compose.yml
data/coverage-eval/: lfm2-quality-results.json  lfm2-quality-summary.md  queries.yaml
data/source-research/: audit-after-ep-body-2026-05-15.md  authority-registry.yaml  coverage-audit-2026-05-15.md  coverage-report.md  final-audit-2026-05-16.md  phase1-recovery.yaml  phase10-rfcs.yaml  phase11-post-cutoff.yaml  phase2-recovery.yaml  phase3-role-rerun.yaml  phase4-recovery.yaml  phase5-recovery.yaml  phase6-recovery.yaml  phase7-recovery.yaml  phase8-recovery.yaml  phase9-spa-fix.yaml  phase9b-spa-fix-v2.yaml  popularity-index.yaml  wave3-audit-2026-05-15.md  wave4-5-audit-2026-05-15.md  wave6-audit-2026-05-15.md  wave7-8-audit-2026-05-15.md
data/source-research/compiled/: architecture.yaml  clarification.yaml  data-eng.yaml  decomposition.yaml  designer.yaml  developer.yaml  devops.yaml  embedded.yaml  frameworks-pyramid.yaml  gamedev.yaml  gaps-dec-arc-plan-sh.yaml  gaps-pm-clr-dev.yaml  ml.yaml  mobile.yaml  network.yaml  performance.yaml  planning.yaml  product-manager.yaml  reviewer.yaml  security.yaml  self-heal.yaml  validation.yaml  web3.yaml
data/source-research/role-recipes/: architecture.yaml  clarification.yaml  data-eng.yaml  decomposition.yaml  designer.yaml  developer.yaml  devops.yaml  embedded.yaml  frameworks-pyramid.yaml  gamedev.yaml  gaps-dec-arc-plan-sh.yaml  gaps-pm-clr-dev.yaml  ml.yaml  mobile.yaml  network.yaml  performance.yaml  planning.yaml  product-manager.yaml  reviewer.yaml  security.yaml  self-heal.yaml  validation.yaml  web3.yaml
docs/: README.md  api.md  coverage-differentiators.md  coverage-vs-context7.md  deployment.md  flat-rag-migration.md  getting-started.md  role-recipes.md  scenarios.md  sdk-python.md  sdk-ts.md  source-discovery-channels.md  webhooks.md
infra/: Dockerfile  docker-compose.yml
infra/k8s/: api.yaml  apply-ingest-cronjob.sh  coverage-audit-cronjob.yaml  ingest-cronjob.yaml  ingest-job.yaml  ingress.yaml  namespace.yaml  neo4j.yaml  ollama-lfm2.yaml  summary-worker-cronjob.yaml  web.yaml
reports/: report_general.md  report_scientific.md
sdk/: openapi.json
sdk/python/: README.md  pyproject.toml
sdk/python/lighthouse_client/: __init__.py  client.py  models.py  signing.py
sdk/ts/: README.md  package.json  tsconfig.json
sdk/ts/src/: index.ts  openapi.d.ts
src/lighthouse/: __init__.py  cli.py  ingest.py  relevance.py
src/lighthouse/api/: admin_importers.py  dependencies.py  main.py  proposal.py  retrieval.py  v1_analytics.py  v1_corpus.py  v1_keys.py  v1_usage.py  v1_webhooks.py  v1_workspaces.py
src/lighthouse/connectors/: base.py  crawl.py  github.py  github_releases.py  github_tree.py  markdown.py  rss.py  sitemap_crawl.py  web.py
src/lighthouse/core/: auth.py  config.py  enrichment.py  flat_graph.py  graph.py  metrics.py  migrator.py  query_log.py  ratelimit.py  usefulness.py
src/lighthouse/core/migrations/: 0001_baseline.sql  0002_workspace_id.sql  0003_importers.sql  0004_importer_workspace_name_unique.sql  0005_webhooks.sql  0006_query_log.sql  0007_query_log_scores.sql  0008_api_keys.sql  0009_webhooks_workspace.sql  0010_workspaces.sql  0011_run_queue.sql
src/lighthouse/importers/: __init__.py  _optional.py  base.py  crypto.py  provisioning.py  registry.py  runner.py  store.py
src/lighthouse/importers/adapters/: __init__.py  github_releases.py  github_repo.py  llama_hub.py  llama_tier_a.py  llama_tier_b.py  rss.py  sitemap.py  url_list.py
src/lighthouse/librarian/: agent.py
src/lighthouse/mcp/: server.py
src/lighthouse/proposals/: __init__.py  queue.py  store.py  worker.py
src/lighthouse/runner/: __init__.py  config.py  coverage_audit.py  scheduler.py  state.py  summary_worker.py
src/lighthouse/ui/: __init__.py
src/lighthouse/ui/static/: app.js  index.html  style.css
src/lighthouse/webhooks/: __init__.py  dispatcher.py  signing.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_connectors.py  test_flat_graph.py  test_mcp.py  test_proposals.py  test_queue.py  test_runner.py  test_scenarios.py  test_smoke.py
tests/integration/: test_falkordb.py  test_importer_workspace.py  test_ingest_cycle.py  test_migrations.py  test_neo4j.py  test_provisioning.py  test_scenarios_pg.py  test_workspace_isolation.py
tools/: agent_bench.py  agent_bench_openai.py  agent_bench_v2.py  audit_bench.py  build_pdfs.py  clean_graph.py  consolidate_recipes.py  find_gaps.py  generate_chunk_summaries.py  lfm2_quality_test.py  migrate_dedupe_recipes.py  migrate_falkordb_to_neo4j.py  migrate_recipes_to_importers.py  render_charts.py  role_recipe_compose.py  status.py
web/: .dockerignore  .env.example  .gitignore  CONTENT_AUDIT.md  CONTENT_AUDIT_V2.md  Dockerfile  HOME_REBALANCE.md  HOME_SIZING.md  RECENTLY_INDEXED_REDESIGN.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
web/sql/: 001_users.sql  002_importers.sql  003_importers_unique_name.sql  004_webhooks.sql
web/src/: env.d.ts  middleware.ts
web/src/components/: ChunkCard.astro  CodeBlock.astro  IndexedPulse.astro  SearchBar.astro  StatStrip.astro
web/src/layouts/: Newspaper.astro  Site.astro
web/src/lib/: admin.ts  api-base.ts  auth.ts  cache.ts  chunk-display.ts  db.ts  importers-api.ts  origin.ts  paddle.ts  source-display.ts  stats.ts  usage.ts  users.ts
web/src/pages/: about.astro  engine.astro  healthz.ts  home.astro  index.astro  pricing.astro  search.astro  sections.astro
web/src/styles/: global.css
(+20 files in other folders)
