[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lighthouse"
version = "0.0.1"
description = "Knowledge base for AI agents — MCP retrieval + proposal pipeline on top of a temporal knowledge graph"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "harborgang" }]
keywords = ["knowledge-graph", "ai-agents", "mcp", "rag", "graphiti"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "graphiti-core[falkordb]>=0.29",
    "llama-index-core>=0.12",
    "llama-index-readers-file>=0.4",
    "trafilatura>=2.0",
    "llama-index-readers-github>=0.6",
    "anthropic>=0.40",
    "python-multipart>=0.0.12",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://harborgang.com"

[project.scripts]
lighthouse = "lighthouse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lighthouse"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
