[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lighthouse"
version = "0.0.1"
description = "Knowledge base for AI agents — MCP retrieval + proposal pipeline on a flat-RAG (Postgres + pgvector) engine"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "harborgang" }]
keywords = ["ai-agents", "mcp", "rag", "pgvector", "retrieval"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "llama-index-core>=0.12",
    "llama-index-readers-file>=0.4",
    "trafilatura>=2.0",
    "llama-index-readers-github>=0.6",
    "anthropic>=0.40",
    "python-multipart>=0.0.12",
    "mcp>=1.0",
    "asyncpg>=0.30",
    "cryptography>=43.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

# ─────────── Importer extras ───────────
# Each Tier-A llama-hub-backed importer is gated by an optional-deps
# group so the base install stays slim (~200 MB without these). The
# admin UI raises a friendly error when the user picks a type whose
# package isn't installed.
# Prod image installs `[importers-all]` so every type is available.

importers-notion = ["llama-index-readers-notion>=0.3"]
importers-confluence = ["llama-index-readers-confluence>=0.3"]
importers-jira = ["llama-index-readers-jira>=0.3"]
importers-gitlab = ["llama-index-readers-gitlab>=0.3"]
importers-bitbucket = ["llama-index-readers-bitbucket>=0.2"]
importers-linear = ["llama-index-readers-linear>=0.3"]
importers-wikipedia = ["llama-index-readers-wikipedia>=0.3"]
# File reader already in base deps (llama-index-readers-file). Keep
# a group anyway so docs can advise `[importers-file]` for clarity.
importers-file = ["llama-index-readers-file>=0.4"]

# ── Tier B ──
importers-slack = ["llama-index-readers-slack>=0.3"]
importers-discord = ["llama-index-readers-discord>=0.3"]
importers-s3 = ["llama-index-readers-s3>=0.3"]
importers-gcs = ["llama-index-readers-gcs>=0.3"]
importers-azure-blob = ["llama-index-readers-azstorage-blob>=0.3"]
importers-box = ["llama-index-readers-box>=0.3"]
importers-google-drive = ["llama-index-readers-google>=0.4"]
importers-asana = ["llama-index-readers-asana>=0.3"]
importers-trello = ["llama-index-readers-trello>=0.3"]
importers-zendesk = ["llama-index-readers-zendesk>=0.3"]
importers-intercom = ["llama-index-readers-intercom>=0.3"]
importers-database = ["llama-index-readers-database>=0.3", "SQLAlchemy>=2.0"]
importers-mongodb = ["llama-index-readers-mongodb>=0.3"]
importers-arxiv = ["llama-index-readers-papers>=0.3"]
importers-airtable = ["llama-index-readers-airtable>=0.3"]
importers-reddit = ["llama-index-readers-reddit>=0.3"]
importers-stackoverflow = ["llama-index-readers-stackoverflow>=0.3"]

importers-all = [
    # Tier A
    "llama-index-readers-notion>=0.3",
    "llama-index-readers-confluence>=0.3",
    "llama-index-readers-jira>=0.3",
    "llama-index-readers-gitlab>=0.3",
    "llama-index-readers-bitbucket>=0.2",
    "llama-index-readers-linear>=0.3",
    "llama-index-readers-wikipedia>=0.3",
    "llama-index-readers-file>=0.4",
    # Tier B
    "llama-index-readers-slack>=0.3",
    "llama-index-readers-discord>=0.3",
    "llama-index-readers-s3>=0.3",
    "llama-index-readers-gcs>=0.3",
    "llama-index-readers-azstorage-blob>=0.3",
    "llama-index-readers-box>=0.3",
    "llama-index-readers-google>=0.4",
    "llama-index-readers-asana>=0.3",
    "llama-index-readers-trello>=0.3",
    "llama-index-readers-zendesk>=0.3",
    "llama-index-readers-intercom>=0.3",
    "llama-index-readers-database>=0.3",
    "SQLAlchemy>=2.0",
    "llama-index-readers-mongodb>=0.3",
    "llama-index-readers-papers>=0.3",
    "llama-index-readers-airtable>=0.3",
    "llama-index-readers-reddit>=0.3",
    "llama-index-readers-stackoverflow>=0.3",
]

[project.urls]
Homepage = "https://harborgang.com"

[project.scripts]
lighthouse = "lighthouse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lighthouse"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.ruff.lint.per-file-ignores]
# The enrichment prompt is a long literal — its line length is content,
# not code style.
"src/lighthouse/core/enrichment.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
