[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lighthouse-client"
version = "0.1.0"
description = "Python client for the Lighthouse engine API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Harbor Gang", email = "hello@harborgang.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.9",
]

[project.urls]
Homepage = "https://github.com/ElMundiUA/lighthouse"
"Bug Tracker" = "https://github.com/ElMundiUA/lighthouse/issues"

[tool.hatch.build.targets.wheel]
packages = ["lighthouse_client"]
